--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ h3 {
     margin: 5px 0;
 }
 
+
 /* ------ feature start-----  */
-.feature-container{
+.bg-1{
     background-color: #2D25A0;
 }
 .d-flex{
@@ -75,17 +76,17 @@ h3 {
     box-shadow: 1px 0px 24px #0000002e;
     width: 85%;
     margin-bottom: 25px;
+    cursor: pointer;
 }
 
 /*------ Players Info End-------- */
 
 
 /*------ Teams Start --------- */
-.teams-container{
-    background-color: #bd6c6c1a;
-}
+
 .all-teams h2{
     text-align: center;
+    text-decoration: underline;
 }
 
 .teams {
@@ -104,11 +105,12 @@ h3 {
     margin: 8px 8px;
     border-radius: 10px;
     border: 1px solid gray;
+    cursor: pointer;
 }
 .team:hover{
     color: seagreen;
     border: 1px solid seagreen;
-    transform: scale(1.1);
+    transform: scale(1.16);
 }
 
 .team img{
@@ -138,7 +140,10 @@ h3 {
 
 
 /*-------- Sponsor Start  -------*/
-.sponsors-container{
+.text-underline{
+    text-decoration: underline;
+}
+.bg-2{
     background-color: #bd6c6c1a;
 }
 .sponsors{
@@ -148,9 +153,11 @@ h3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 50px 125px;
+    transition: transform 1s ease-in-out;
 }
-.feature img{
-    transition: transform 1s ease-out;
+
+.sponsor img {
+    cursor: pointer;
 }
 .sponsor img:hover {
     transform: scale(1.3);
@@ -159,6 +166,7 @@ h3 {
 /*------ Sponsor End  --------*/
 
 /*---------- Contact Us Start ------*/
+
 .contact-us{
     padding: 30px;
 }
@@ -213,6 +221,16 @@ input{
     height: 25px;
     margin: 0 2px;
     background: #a9a9a987;
+    transition: .8s ease;
+}
+
+.social-icon ul li:hover{
+    background: #093688d1;
+    border: 1px solid #fff;
+
+}
+.social-icon ul li:hover a{
+    color: #fff;
 }
 /*------ Footer End  ------*/
 
